cambios realizados en servidor operativo

--- a/src/Kore/AgentBundle/Resources/views/Base/base.html.twig
+++ b/src/Kore/AgentBundle/Resources/views/Base/base.html.twig
@@ -9,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Kore">
+    <meta name="author" content="gfiguero@gmail.com">
     <meta name="language" content="es">
-    <title>Kore - {% block title %}{% endblock %}</title>
+    <title>Registro Social de Hogares - Quillota - {% block title %}{% endblock %}</title>
     <link href="{{ absolute_url(asset('vendor/font-awesome/css/font-awesome.min.css')) }}" rel="stylesheet" type="text/css">
     <link href="{{ absolute_url(asset('vendor/jquery-ui/themes/base/jquery-ui.min.css')) }}" rel="stylesheet">
     <link href="{{ absolute_url(asset('bundles/koreagent/css/agent.css')) }}" rel="stylesheet">
