--- a/src/Kore/AgentBundle/Resources/views/Persona/show.html.twig
+++ b/src/Kore/AgentBundle/Resources/views/Persona/show.html.twig
@@ -6,7 +6,7 @@
 
 {% trans_default_domain 'KoreAgentBundle' %}
 
-{% block title %}{{ 'persona.show.title'|trans({'%id%':persona.id}) }}{% endblock %}
+{% block title %}{{ 'persona.show.title'|trans }}{% endblock %}
 
 {% block body %}
 
