--- a/src/Kore/AgentBundle/Resources/views/Base/base.html.twig
+++ b/src/Kore/AgentBundle/Resources/views/Base/base.html.twig
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kore">
     <meta name="language" content="es">
-    <title>Kore - {% block title %}{% endblock %}</title>
+    <title>RS DIDECO QUILLOTA - {% block title %}{% endblock %}</title>
     <link href="{{ absolute_url(asset('vendor/font-awesome/css/font-awesome.min.css')) }}" rel="stylesheet" type="text/css">
     <link href="{{ absolute_url(asset('vendor/jquery-ui/themes/base/jquery-ui.min.css')) }}" rel="stylesheet">
     <link href="{{ absolute_url(asset('bundles/koreagent/css/agent.css')) }}" rel="stylesheet">
