--- a/src/Kore/AgentBundle/Resources/views/Encuestador/show.html.twig
+++ b/src/Kore/AgentBundle/Resources/views/Encuestador/show.html.twig
@@ -6,14 +6,13 @@
 
 {% trans_default_domain 'KoreAgentBundle' %}
 
-{% block title %}{{ 'encuestador.show.title'|trans({'%id%':encuestador.id}) }}{% endblock %}
+{% block title %}{{ 'encuestador.show.title'|trans }}{% endblock %}
 
 {% block body %}
-
     <div id="page-wrapper">
         <div class="row" id="page-header">
             <div class="col-lg-12">
-                <h1 class="page-header">{% block icons %}{{ parent() }}{% endblock %}{{ 'encuestador.show.title'|trans({'%id%':encuestador.id}) }}</h1>
+                <h1 class="page-header">{% block icons %}{{ parent() }}{% endblock %}{{ 'encuestador.show.title'|trans }}</h1>
                 {% block flashbag %}{{ parent() }}{% endblock %}
             </div>
         </div>
